--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "entry.js",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
     "less": "^2.7.1",
@@ -11,10 +14,10 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "style-loader": "^0.13.1",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-preset-es2015": "^6.18.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "react-router": "^3.0.0"
   }
 }
